--- a/B2BApp.Web/Views/Satis/KSatisRapor.cshtml
+++ b/B2BApp.Web/Views/Satis/KSatisRapor.cshtml
@@ -132,7 +132,7 @@
     function loadTable() {
 
         $.ajax({
-            url: 'https://localhost:44369/api/Satis/getkarsilastirmaliSatisRapor',
+            url: 'https://10.60.60.141/api/Satis/getkarsilastirmaliSatisRapor',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
