ana ekrana veriler gelmeden önce spiner konuldu

--- a/B2BApp.Web/Views/SubeStok/SubeStokDurum.cshtml
+++ b/B2BApp.Web/Views/SubeStok/SubeStokDurum.cshtml
@@ -106,6 +106,13 @@
                  'firmaId': firma
             }
         }).done(function (response) {
+            debugger;
+
+            var subeler = 
+
+
+
+
             table = $('#subeStokTable').DataTable({
                 "data": response.data,
                 "language": { "url": '//cdn.datatables.net/plug-ins/2.0.8/i18n/tr.json' },
